k8s/service-scripts.yaml
apiVersion: v1
kind: Service
metadata:
  name: mini-project-a-service
  namespace: my-apps
spec:
  selector:
    app: mini-project-a
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  type: ClusterIP
